--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark ">
   <div class="container">
-    <a class="navbar-brand" href="#">RF</a>
+    <a class="navbar-brand" href="#">👨🏾‍👩‍👧‍👦</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
