--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark ">
   <div class="container">
-    <a class="navbar-brand" href="#">👨🏾‍👩‍👧‍👦</a>
+    <a class="navbar-brand" routerLink="/">👨🏾‍👩‍👧‍👦</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Familias</a>
+          <a class="nav-link active" aria-current="page" routerLink="/family-pagination">Familias</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
