--- a/src/app/components/family/family-pagination/family-pagination.component.html
+++ b/src/app/components/family/family-pagination/family-pagination.component.html
@@ -1,1 +1,49 @@
-<p>family-pagination works!</p>
+
+<h3>
+    Famílias
+</h3>
+
+<hr/>
+
+<div class="row" *ngIf="families && families.length > 0">
+
+    <table>
+        <thead>
+            <th scope="col">#</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Endereço</th>
+            <th scope="col">Numero de membros</th>
+            <th scope="col">Fortuna</th>
+            <th scope="col">Operações</th>
+        </thead>
+
+        <tbody>
+
+            <tr *ngFor="let item of families">
+
+                <td scope="row">{{item.id}}</td>
+                <td scope="row">{{item.name}}</td>
+                <td scope="row">{{item.address}}</td>
+                <td scope="row">{{item.members}}</td>
+                <td scope="row">{{item.money}}</td>
+                <td scope="row"> <button class="btn btn-sm btn-primary">View</button></td>
+
+            </tr>
+
+        </tbody>
+    </table>
+
+</div>
+
+<div class="row" *ngIf="!families || families.length <= 0">
+
+    <div class="col-4">
+
+    </div>
+    <div class="col-4">
+        <p> Não foram foram encontradas familias na app</p>
+    </div>
+    <div class="col-4">
+
+    </div>
+</div>
