--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/family-pagination">Familias</a>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active"   role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Familias
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/family-pagination">Lista</a></li>
+            <li><a class="dropdown-item" routerLink="/family-add">Adicionar</a></li> 
+          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Cofiguração
           </a>
           <ul class="dropdown-menu">
