--- a/src/app/components/family/family-add/family-add.component.html
+++ b/src/app/components/family/family-add/family-add.component.html
@@ -1,1 +1,37 @@
-<p>family-add works!</p>
+<h3>
+    Adicionar Famílias
+</h3>
+<hr />
+
+<form>
+    <div class="mb-3">
+        <label for="nome" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="nome">
+    </div>
+
+    <div class="mb-3">
+        <label for="email" class="form-label">e-Mail</label>
+        <input type="email" class="form-control" id="email">
+    </div>
+
+    <div class="mb-3">
+        <label for="phone" class="form-label">Telefone</label>
+        <input type="text" class="form-control" id="phone">
+    </div>
+
+    <div class="mb-3">
+        <label for="address" class="form-label">Endereço</label>
+        <input type="text" class="form-control" id="address">
+    </div>
+
+    <div class="mb-3">
+        <label for="money" class="form-label">Fortuna</label>
+        <input type="text" class="form-control" id="money">
+    </div>
+
+    <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Tem mais de uma casa ?</label>
+    </div>
+    <button type="submit" class="btn btn-success btn-sm">Adicionar</button>
+</form>
