--- a/src/app/components/family/family-pagination/family-pagination.component.html
+++ b/src/app/components/family/family-pagination/family-pagination.component.html
@@ -1,8 +1,9 @@
 <h3>
     Famílias
-</h3>
-
+</h3> 
 <hr />
+
+
 <div class="table-responsive ">
     <div *ngIf="families && families.length > 0">
 
@@ -25,7 +26,7 @@
                     <td scope="row">{{item.address}}</td>
                     <td scope="row">{{item.members}}</td>
                     <td scope="row">{{item.money}}</td>
-                    <td scope="row"> <button class="btn btn-sm btn-primary">View</button></td>
+                    <td scope="row"> <button class="btn btn-sm btn-outline-dark">View</button></td>
 
                 </tr>
 
