--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark ">
+<nav class="navbar navbar-expand-sm    navbar-dark bg-dark ">
   <div class="container">
     <a class="navbar-brand" routerLink="/">👨🏾‍👩‍👧‍👦</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,8 +30,8 @@
        
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Procurar">
-        <button class="btn btn-outline-success" type="submit">Procurar</button>
+        <input class="form-control me-2" type="search" placeholder="Procurar" aria-label="Procurar">
+        <button class="btn btn-outline-success " type="submit">Procurar</button>
       </form>
     </div>
   </div>
