--- a/src/app/components/family/family-pagination/family-pagination.component.html
+++ b/src/app/components/family/family-pagination/family-pagination.component.html
@@ -27,7 +27,7 @@
                     <td scope="row">{{item.members}}</td>
                     <td scope="row">{{item.money}}</td>
                     <td scope="row">
-                        <button class="btn btn-sm btn-outline-dark" [routerLink]="['family-edit',item.id]">
+                        <button class="btn btn-sm btn-outline-dark" [routerLink]="['/family-edit',item.id]">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-pencil-square" viewBox="0 0 16 16">
                                 <path
