--- a/src/app/components/family/family-edit/family-edit.component.html
+++ b/src/app/components/family/family-edit/family-edit.component.html
@@ -8,6 +8,15 @@
         <form #form="ngForm" (ngSubmit)="UpdateFamily()">
     
             <div class="mb-3">
+                <label for="id" class="form-label">Id</label>
+                <input type="text" class="form-control" 
+                 
+                disabled
+                        id="id" 
+                        name="id" 
+                        [(ngModel)]="EditModel.id">
+            </div>
+            <div class="mb-3">
                 <label for="nome" class="form-label">Nome</label>
                 <input type="text" class="form-control" 
                         id="nome" 
